Fixed layout problem at 320px (iPhone) for WeeklySchedule #1041

--- a/app/source/css/components/WeeklySchedule.styl
+++ b/app/source/css/components/WeeklySchedule.styl
@@ -66,11 +66,11 @@
                     display: inline-block;
                     // Fix the total height and the strange margin added
                     vertical-align: middle;
-                    // 5px horizontal is OK in iPhone: enought padding without requiring 2 lines,
+                    // 4px horizontal is OK in iPhone: enought padding without requiring 2 lines,
                     // while in Chrome and Firefox, for some reason, they add an additional internal
                     // gap between padding and the beggining of the text. Thats make it a bit wider
                     // in Chrome/Android, but not enought to have problems from 320px screen width.
-                    padding: 6px 5px;
+                    padding: 6px 4px;
                 }
             }
 
